[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Music/main_drone_fix.gd" type="Script" id=1]
[ext_resource path="res://music/main-master.wav" type="AudioStream" id=2]
[ext_resource path="res://sound fx/close-door.wav" type="AudioStream" id=3]
[ext_resource path="res://sound fx/footsteps.wav" type="AudioStream" id=4]
[ext_resource path="res://sound fx/fail-state.wav" type="AudioStream" id=5]
[ext_resource path="res://music/drone-rhodes.wav" type="AudioStream" id=6]
[ext_resource path="res://sound fx/open-door.wav" type="AudioStream" id=7]
[ext_resource path="res://music/drone-bugs.wav" type="AudioStream" id=8]
[ext_resource path="res://music/drone-pursuit.wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Music/open_door_fix.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Music/close_door_fix.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Music/music_control.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Music/Timer.gd" type="Script" id=13]
[ext_resource path="res://sound fx/panel-interact.wav" type="AudioStream" id=14]
[ext_resource path="res://sound fx/teethy-licks.wav" type="AudioStream" id=15]
[ext_resource path="res://sound fx/end-state.wav" type="AudioStream" id=16]
[ext_resource path="res://sound fx/click.wav" type="AudioStream" id=17]
[ext_resource path="res://sound fx/alarm.wav" type="AudioStream" id=18]

[node name="music_control" type="Node2D"]
script = ExtResource( 12 )

[node name="win_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="teethy_licks" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "space reverb"

[node name="main_drone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.588
bus = "main drone"
script = ExtResource( 1 )

[node name="Timer2" type="Timer" parent="main_drone"]
script = ExtResource( 13 )

[node name="monster_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="fail_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "space reverb"

[node name="open_door" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 10 )

[node name="one" type="AudioStreamPlayer" parent="open_door"]
stream = ExtResource( 7 )

[node name="two" type="AudioStreamPlayer" parent="open_door"]
stream = ExtResource( 7 )

[node name="three" type="AudioStreamPlayer" parent="open_door"]
stream = ExtResource( 7 )

[node name="close_door" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 11 )

[node name="one" type="AudioStreamPlayer" parent="close_door"]
stream = ExtResource( 3 )

[node name="two" type="AudioStreamPlayer" parent="close_door"]
stream = ExtResource( 3 )

[node name="three" type="AudioStreamPlayer" parent="close_door"]
stream = ExtResource( 3 )

[node name="monster2_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="other_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="winstate" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -3.692
bus = "slight rvb"

[node name="alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 5.0
